<resources>
    <string name="app_name">Carryout</string>
    <string name="home">主页</string>
    <string name="me">我的</string>
    <string name="more">更多</string>
    <string name="order">订单</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">平顶山市湛河区北渡镇统张村</string>
    <string name="search">输入商家、商品名称</string>
    <string name="goods">商品</string>
    <string name="judge">评价</string>
    <string name="seller">商家</string>
    <string name="submit_cart">提交订单</string>
    <string name="no_charge">不含配送费</string>
    <string name="tijiao">您要提交订单吗？</string>
    <string name="confirm">确定</string>
    <string name="order_dilicious">美食订单</string>
    <string name="settle_center">结算中心</string>
    <string name="choose_address">请选择收货地址</string>
    <string name="payment">支付方式</string>
    <string name="online_pay">在线支付</string>
    <string name="hongbao">红包</string>
    <string name="ticket_shop">商家代金券</string>
    <string name="goods_choose">已选择商品</string>
    <string name="good_total">商品共计：</string>
</resources>
