<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settle_center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.peixing.carryout.ui.activity.SettleCenterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_settle_center"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:title="@string/settle_center"></android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_address"
                    android:layout_width="match_parent"
                    android:layout_height="100dip"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_address_settle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="35dip"
                        android:gravity="center"
                        android:text="@string/choose_address"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dip"
                        android:foregroundGravity="center"
                        android:src="@mipmap/bk_icon_arrow_small" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dip"
                        android:layout_alignParentBottom="true"
                        android:background="@android:color/black" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dip"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="25dip"
                            android:gravity="center_vertical"
                            android:text="@string/payment"
                            android:textColor="@android:color/black"
                            android:textSize="20dip" />

                        <LinearLayout
                            android:id="@+id/ll_payment"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true">


                            <TextView
                                android:id="@+id/tv_payment"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/online_pay"
                                android:textColor="@android:color/black"
                                android:textSize="18dip" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentRight="true"
                                android:layout_marginLeft="25dip"
                                android:layout_marginRight="15dip"
                                android:foregroundGravity="center"
                                android:src="@mipmap/bk_icon_arrow_small" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dip"
                            android:layout_alignParentBottom="true"
                            android:background="@android:color/black" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dip"
                        android:layout_gravity="center_vertical">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="25dip"
                            android:gravity="center_vertical"
                            android:text="@string/hongbao"
                            android:textColor="@android:color/black"
                            android:textSize="20dip" />

                        <LinearLayout
                            android:id="@+id/ll_hongbao"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true">


                            <TextView
                                android:id="@+id/tv_hongbao"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="无可用红包"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="18dip" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentRight="true"
                                android:layout_marginLeft="25dip"
                                android:layout_marginRight="15dip"
                                android:foregroundGravity="center"
                                android:src="@mipmap/bk_icon_arrow_small" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dip"
                            android:layout_alignParentBottom="true"
                            android:background="@android:color/black" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dip"
                        android:layout_gravity="center_vertical">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="25dip"
                            android:gravity="center_vertical"
                            android:text="@string/ticket_shop"
                            android:textColor="@android:color/black"
                            android:textSize="20dip" />

                        <LinearLayout
                            android:id="@+id/ll_ticker_shop"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true">


                            <TextView
                                android:id="@+id/tv_shop_ticket"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="无可用代金券"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="18dip" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentRight="true"
                                android:layout_marginLeft="25dip"
                                android:layout_marginRight="15dip"
                                android:foregroundGravity="center"
                                android:src="@mipmap/bk_icon_arrow_small" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="5dip"
                            android:layout_alignParentBottom="true"
                            android:background="@android:color/black" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dip"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dip"
                            android:layout_height="30dip"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="35dip"
                            android:src="@drawable/item_logo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="15dip"
                            android:gravity="center_vertical"
                            android:text="@string/goods_choose"
                            android:textColor="@color/black"
                            android:textSize="22dip" />

                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_settle_center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone"></android.support.v7.widget.RecyclerView>

                    <LinearLayout
                        android:id="@+id/ll_goods_selected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"></LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dip"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="35dip"
                            android:text="5元"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="22dp"
                            android:gravity="center_vertical"
                            android:text="配送费"
                            android:textSize="20sp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="22dp"
                            android:id="@+id/textView" />

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@color/black">

            <TextView
                android:id="@+id/tv_total_order"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="35dip"
                android:gravity="center_vertical"
                android:text="@string/good_total"
                android:textColor="@color/white"
                android:textSize="20dip" />

            <Button
                android:id="@+id/bt_submit_order"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/colorAccent"
                android:text="@string/submit_cart"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
